--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angularfire": "~1.1.1",
     "angular-bootstrap-calendar": "~0.11.3",
     "components-font-awesome": "~4.3.0",
-    "ng-cordova-oauth": "~0.1.4"
+    "ng-cordova-oauth": "~0.1.4",
+    "paper": "~0.9.25"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
